src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "Neela Demo";
  src: url("/public/Neela-Demo-Regular.otf") format("opentype");
}

body {
  
  font-family: "Neela Demo", sans-serif;
  background-color: #f1eddd;
  -webkit-font-smoothing: antialiased;
}


@font-face {
  font-family: 'Neela';
  src: url('/Neela-Demo-Regular.otf') format('opentype');
  font-weight: normal;
  font-style: normal;
}


@keyframes pulse {
  0%, 100% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.1);
  }
}

.pulse-animation {
  animation: pulse 1s infinite;
}

html {
  scroll-behavior: smooth;
}

